# QRConnect

./: .gitignore  CMakeLists.txt  QRConnect.cpp  README.md
.github/workflows/: release.yml
